# requireAuth.js
@@ -1,0 +1,15 @@
+function requiresAuthMiddleware(req, res, next) {
+    if (req.oidc.isAuthenticated()) {
+        return next();
+    } else {
+        return res.status(401).send({
+            message: 'UnauthorizedError: Authentication is required for this route.'
+        });
+    }
+}
+
+module.exports = requiresAuthMiddleware;
+
+
+
+
